--- a/styles.css
+++ b/styles.css
@@ -52,20 +52,6 @@ settings:
         max: 1.0
         step: 0.05
     -
-        id: window-alignment
-        title: "Window location"
-        description: "Outline window location"
-        type: class-select
-        allowEmpty: false
-        default: do-align-right
-        options:
-            -
-                label: Right
-                value: do-align-right
-            -
-                label: Left
-                value: do-align-left
-    -
         id: dynamic-outline-active-heading-pill-color
         title: 'Active heading indication color'
         description: 'Color of active heading pill'
@@ -192,14 +178,9 @@ settings:
     opacity: var(--dynamic-outline-opacity);
 }
 
-.do-align-left #dynamic-outline {
+#dynamic-outline.location-left {
     right: unset;
     left: 20px;
-}
-
-.do-align-right #dynamic-outline {
-    left: unset;
-    right: 20px;
 }
 
 /* Corner case for the Editing Toolbar plugin */
