refactor: hide the "Reload" button in settings until the corresponding setting is toggled

--- a/styles.css
+++ b/styles.css
@@ -192,6 +192,10 @@ settings:
     opacity: 1.0;
 }
 
+button.dynamic-outline-reload[disabled] {
+    display: none;
+}
+
 /* 
  * Dynamic Outline Search Container
  */
