--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,12 @@
 name: Dynamic Outline
 id: obsidian-dynamic-outline
 settings:
+	-
+		id: text-and-formatting
+		title: 'Text and formatting'
+		type: heading
+		level: 2
+		collapsed: true
     - 
         id: dynamic-outline-font-size
         title: 'Font size'
@@ -33,40 +39,307 @@ settings:
         step: 1
         format: px
     -
-        id: dynamic-outline-window-width
-        title: 'Window width'
-        description: 'Outline window width (in pixels)'
-        type: variable-number-slider
-        default: 256
-        min: 128
-        max: 512
-        step: 32
-        format: px
-    -
-        id: dynamic-outline-opacity
-        title: 'Window opacity'
-        description: 'Outline window opacity when the outline is not hovered over'
-        type: variable-number-slider
-        default: 1.0
-        min: 0.0
-        max: 1.0
-        step: 0.05
-    -
-        id: dynamic-outline-active-heading-pill-color
-        title: 'Active heading indication color'
-        description: 'Color of active heading pill'
-        type: variable-select
-        allowEmpty: false
-        default: var(--text-accent)
-        options:
-            -
-                label: Accent
-                value: var(--text-accent)
-            -
-                label: Monochrome
-                value: var(--text-normal)
-    -
-        id: dynamic-outline-active-heading-font-weight
+		id: headings
+		title: 'Headings'
+		type: heading
+		level: 2
+		collapsed: true
+	-
+		id: headings-level-1
+		title: 'Headings level 1'
+		type: heading
+		level: 3
+		collapsed: true
+	-
+		id: dynamic-outline-h1-font-weight
+		title: 'H1 font weight'
+		type: variable-select
+		default: var(--font-bold)
+		options:
+			-
+				label: Normal
+				value: var(--font-normal)
+			-
+				label: Semibold
+				value: var(--font-semibold)
+			-
+				label: Bold
+				value: var(--font-bold)
+	-
+		id: dynamic-outline-h1-font-style
+		title: 'H1 font style'
+		type: variable-select
+		default: normal
+		options:
+			-
+				label: Normal
+				value: normal
+			-
+				label: Italic
+				value: italic
+	-
+		id: dynamic-outline-h1-font-variant
+		title: 'H1 font variant'
+		type: variable-select
+		default: normal
+		options:
+			-
+				label: Normal
+				value: normal
+			-
+				label: Small-caps
+				value: small-caps
+			-
+				label: All small-caps
+				value: all-small-caps
+	-
+		id: headings-level-2
+		title: 'Headings level 2'
+		type: heading
+		level: 3
+		collapsed: true
+	-
+		id: dynamic-outline-h2-font-weight
+		title: 'H2 font weight'
+		type: variable-select
+		default: var(--font-normal)
+		options:
+			-
+				label: Normal
+				value: var(--font-normal)
+			-
+				label: Semibold
+				value: var(--font-semibold)
+			-
+				label: Bold
+				value: var(--font-bold)
+	-
+		id: dynamic-outline-h2-font-style
+		title: 'H2 font style'
+		type: variable-select
+		default: normal
+		options:
+			-
+				label: Normal
+				value: normal
+			-
+				label: Italic
+				value: italic
+	-
+		id: dynamic-outline-h2-font-variant
+		title: 'H2 font variant'
+		type: variable-select
+		default: normal
+		options:
+			-
+				label: Normal
+				value: normal
+			-
+				label: Small-caps
+				value: small-caps
+			-
+				label: All small-caps
+				value: all-small-caps
+	-
+		id: headings-level-3
+		title: 'Headings level 3'
+		type: heading
+		level: 3
+		collapsed: true
+	-
+		id: dynamic-outline-h3-font-weight
+		title: 'H3 font weight'
+		type: variable-select
+		default: var(--font-normal)
+		options:
+			-
+				label: Normal
+				value: var(--font-normal)
+			-
+				label: Semibold
+				value: var(--font-semibold)
+			-
+				label: Bold
+				value: var(--font-bold)
+	-
+		id: dynamic-outline-h3-font-style
+		title: 'H3 font style'
+		type: variable-select
+		default: normal
+		options:
+			-
+				label: Normal
+				value: normal
+			-
+				label: Italic
+				value: italic
+	-
+		id: dynamic-outline-h3-font-variant
+		title: 'H3 font variant'
+		type: variable-select
+		default: normal
+		options:
+			-
+				label: Normal
+				value: normal
+			-
+				label: Small-caps
+				value: small-caps
+			-
+				label: All small-caps
+				value: all-small-caps
+	-
+		id: headings-level-4
+		title: 'Headings level 4'
+		type: heading
+		level: 3
+		collapsed: true
+	-
+		id: dynamic-outline-h4-font-weight
+		title: 'H4 font weight'
+		type: variable-select
+		default: var(--font-normal)
+		options:
+			-
+				label: Normal
+				value: var(--font-normal)
+			-
+				label: Semibold
+				value: var(--font-semibold)
+			-
+				label: Bold
+				value: var(--font-bold)
+	-
+		id: dynamic-outline-h4-font-style
+		title: 'H4 font style'
+		type: variable-select
+		default: normal
+		options:
+			-
+				label: Normal
+				value: normal
+			-
+				label: Italic
+				value: italic
+	-
+		id: dynamic-outline-h4-font-variant
+		title: 'H4 font variant'
+		type: variable-select
+		default: normal
+		options:
+			-
+				label: Normal
+				value: normal
+			-
+				label: Small-caps
+				value: small-caps
+			-
+				label: All small-caps
+				value: all-small-caps
+	-
+		id: headings-level-5
+		title: 'Headings level 5'
+		type: heading
+		level: 3
+		collapsed: true
+	-
+		id: dynamic-outline-h5-font-weight
+		title: 'H5 font weight'
+		type: variable-select
+		default: var(--font-normal)
+		options:
+			-
+				label: Normal
+				value: var(--font-normal)
+			-
+				label: Semibold
+				value: var(--font-semibold)
+			-
+				label: Bold
+				value: var(--font-bold)
+	-
+		id: dynamic-outline-h5-font-style
+		title: 'H5 font style'
+		type: variable-select
+		default: normal
+		options:
+			-
+				label: Normal
+				value: normal
+			-
+				label: Italic
+				value: italic
+	-
+		id: dynamic-outline-h5-font-variant
+		title: 'H5 font variant'
+		type: variable-select
+		default: normal
+		options:
+			-
+				label: Normal
+				value: normal
+			-
+				label: Small-caps
+				value: small-caps
+			-
+				label: All small-caps
+				value: all-small-caps
+	-
+		id: headings-level-6
+		title: 'Headings level 6'
+		type: heading
+		level: 3
+		collapsed: true
+	-
+		id: dynamic-outline-h6-font-weight
+		title: 'H6 font weight'
+		type: variable-select
+		default: var(--font-normal)
+		options:
+			-
+				label: Normal
+				value: var(--font-normal)
+			-
+				label: Semibold
+				value: var(--font-semibold)
+			-
+				label: Bold
+				value: var(--font-bold)
+	-
+		id: dynamic-outline-h6-font-style
+		title: 'H6 font style'
+		type: variable-select
+		default: normal
+		options:
+			-
+				label: Normal
+				value: normal
+			-
+				label: Italic
+				value: italic
+	-
+		id: dynamic-outline-h6-font-variant
+		title: 'H6 font variant'
+		type: variable-select
+		default: normal
+		options:
+			-
+				label: Normal
+				value: normal
+			-
+				label: Small-caps
+				value: small-caps
+			-
+				label: All small-caps
+				value: all-small-caps
+	-
+		id: active-heading-highlight
+		title: 'Active heading highlight'
+		type: heading
+		level: 2
+		collapsed: true
+	-
+        id: dynamic-outline-highlight-font-weight
         title: 'Active heading font weight'
         description: 'Font weight of active heading'
         type: variable-select
@@ -82,6 +355,20 @@ settings:
             -
                 label: Bold
                 value: var(--font-bold)
+    -
+        id: dynamic-outline-active-heading-pill-color
+        title: 'Active heading indication color'
+        description: 'Color of active heading pill'
+        type: variable-select
+        allowEmpty: false
+        default: var(--text-accent)
+        options:
+            -
+                label: Accent
+                value: var(--text-accent)
+            -
+                label: Monochrome
+                value: var(--text-normal)
     -
         id: dynamic-outline-active-heading-background
         title: 'Active heading background color'
@@ -100,6 +387,22 @@ settings:
                 label: None
                 value: none
 	-
+		id: window-layout
+		title: 'Window layout'
+		type: heading
+		level: 2
+		collapsed: true
+	-
+        id: dynamic-outline-window-width
+        title: 'Window width'
+        description: 'Outline window width (in pixels)'
+        type: variable-number-slider
+        default: 256
+        min: 128
+        max: 512
+        step: 32
+        format: px
+    -
 		id: dynamic-outline-window-offset-top
 		title: 'Window offset top'
 		description: 'Add more space before the outline window'
@@ -121,7 +424,15 @@ settings:
 		max: 100
 		step: 1
 		format: px
-
+	-
+        id: dynamic-outline-opacity
+        title: 'Window opacity'
+        description: 'Outline window opacity when the outline is not hovered over'
+        type: variable-number-slider
+        default: 1.0
+        min: 0.0
+        max: 1.0
+        step: 0.05
 */
 
 .theme-dark,
@@ -173,10 +484,32 @@ settings:
 
 	/* Active Heading */
 	--dynamic-outline-active-heading-pill-color: var(--interactive-accent);
-	--dynamic-outline-active-heading-font-weight: var(--font-normal);
+	--dynamic-outline-highlight-font-weight: var(--font-normal);
 	--dynamic-outline-active-heading-background: var(
 		--background-modifier-hover
 	);
+
+	/* Headings */
+	--dynamic-outline-h1-font-weight: var(--font-bold);
+	--dynamic-outline-h2-font-weight: var(--font-normal);
+	--dynamic-outline-h3-font-weight: var(--font-normal);
+	--dynamic-outline-h4-font-weight: var(--font-normal);
+	--dynamic-outline-h5-font-weight: var(--font-normal);
+	--dynamic-outline-h6-font-weight: var(--font-normal);
+
+	--dynamic-outline-h1-font-style: normal;
+	--dynamic-outline-h2-font-style: normal;
+	--dynamic-outline-h3-font-style: normal;
+	--dynamic-outline-h4-font-style: normal;
+	--dynamic-outline-h5-font-style: normal;
+	--dynamic-outline-h6-font-style: normal;
+
+	--dynamic-outline-h1-font-variant: normal;
+	--dynamic-outline-h2-font-variant: normal;
+	--dynamic-outline-h3-font-variant: normal;
+	--dynamic-outline-h4-font-variant: normal;
+	--dynamic-outline-h5-font-variant: normal;
+	--dynamic-outline-h6-font-variant: normal;
 }
 
 .theme-light {
@@ -333,16 +666,12 @@ button.dynamic-outline-reload[disabled] {
 #dynamic-outline li.highlight:hover,
 #dynamic-outline li.hovered,
 #dynamic-outline li.highlight.hovered {
-    background-color: var(--dynamic-outline-background-hover);
+	background-color: var(--dynamic-outline-background-hover);
 }
 
 #dynamic-outline li.highlight {
 	position: relative;
 	background-color: var(--dynamic-outline-active-heading-background);
-}
-
-#dynamic-outline li.highlight a:not(.heading-level-1) {
-	font-weight: var(--dynamic-outline-active-heading-font-weight);
 }
 
 #dynamic-outline li.highlight::after {
@@ -354,7 +683,9 @@ button.dynamic-outline-reload[disabled] {
 	background-color: var(--dynamic-outline-active-heading-pill-color);
 	border-radius: 8px;
 
-	/* Center the highlight indicator vertically. */
+	/*
+	 * Center the highlight indicator vertically.
+	 */
 	top: 50%;
 	transform: translateY(-50%);
 	height: 22px;
@@ -367,27 +698,86 @@ button.dynamic-outline-reload[disabled] {
 }
 
 #dynamic-outline li .heading-level-1 {
-	font-weight: bold;
+	font-weight: var(--dynamic-outline-h1-font-weight);
+	font-style: var(--dynamic-outline-h1-font-style);
+	font-variant: var(--dynamic-outline-h1-font-variant);
 }
 
 #dynamic-outline li .heading-level-2 {
+	font-weight: var(--dynamic-outline-h2-font-weight);
+	font-style: var(--dynamic-outline-h2-font-style);
+	font-variant: var(--dynamic-outline-h2-font-variant);
 	padding-left: var(--dynamic-outline-tab-size);
 }
 
 #dynamic-outline li .heading-level-3 {
+	font-weight: var(--dynamic-outline-h3-font-weight);
+	font-style: var(--dynamic-outline-h3-font-style);
+	font-variant: var(--dynamic-outline-h3-font-variant);
 	padding-left: calc(var(--dynamic-outline-tab-size) * 2);
 }
 
 #dynamic-outline li .heading-level-4 {
+	font-weight: var(--dynamic-outline-h4-font-weight);
+	font-style: var(--dynamic-outline-h4-font-style);
+	font-variant: var(--dynamic-outline-h4-font-variant);
 	padding-left: calc(var(--dynamic-outline-tab-size) * 3);
 }
 
 #dynamic-outline li .heading-level-5 {
+	font-weight: var(--dynamic-outline-h5-font-weight);
+	font-style: var(--dynamic-outline-h5-font-style);
+	font-variant: var(--dynamic-outline-h5-font-variant);
 	padding-left: calc(var(--dynamic-outline-tab-size) * 4);
 }
 
 #dynamic-outline li .heading-level-6 {
+	font-weight: var(--dynamic-outline-h6-font-weight);
+	font-style: var(--dynamic-outline-h6-font-style);
+	font-variant: var(--dynamic-outline-h6-font-variant);
 	padding-left: calc(var(--dynamic-outline-tab-size) * 5);
+}
+
+#dynamic-outline li.highlight .heading-level-1 {
+	font-weight: max(
+		var(--dynamic-outline-h1-font-weight),
+		var(--dynamic-outline-highlight-font-weight)
+	); /* Preserve the maximum font weight on highlight. */
+}
+
+#dynamic-outline li.highlight .heading-level-2 {
+	font-weight: max(
+		var(--dynamic-outline-h2-font-weight),
+		var(--dynamic-outline-highlight-font-weight)
+	); /* Preserve the maximum font weight on highlight. */
+}
+
+#dynamic-outline li.highlight .heading-level-3 {
+	font-weight: max(
+		var(--dynamic-outline-h3-font-weight),
+		var(--dynamic-outline-highlight-font-weight)
+	); /* Preserve the maximum font weight on highlight. */
+}
+
+#dynamic-outline li.highlight .heading-level-4 {
+	font-weight: max(
+		var(--dynamic-outline-h4-font-weight),
+		var(--dynamic-outline-highlight-font-weight)
+	); /* Preserve the maximum font weight on highlight. */
+}
+
+#dynamic-outline li.highlight .heading-level-5 {
+	font-weight: max(
+		var(--dynamic-outline-h5-font-weight),
+		var(--dynamic-outline-highlight-font-weight)
+	); /* Preserve the maximum font weight on highlight. */
+}
+
+#dynamic-outline li.highlight .heading-level-6 {
+	font-weight: max(
+		var(--dynamic-outline-h6-font-weight),
+		var(--dynamic-outline-highlight-font-weight)
+	); /* Preserve the maximum font weight on highlight. */
 }
 
 #dynamic-outline .outline-item-hidden {
@@ -403,4 +793,16 @@ button.dynamic-outline-reload[disabled] {
 	opacity: var(--icon-opacity-hover);
 	color: var(--icon-color-hover);
 	background-color: var(--background-modifier-hover);
+}
+
+/* 
+ * Other
+ */
+
+/* Custom Style Settings left padding for the headings sublist. */
+.setting-item[data-id="obsidian-dynamic-outline"]
+	+ .style-settings-container
+	.setting-item[data-id="headings"]
+	+ .style-settings-container {
+	padding-left: 34px;
 }
