feat: inherit heading parameters such as `color`, `style`, `variant` from theme by default (except for `weight`, which remains custom by default). Also update corresponding Style Settings options (#16)

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ settings:
                 label: Accent
                 value: var(--text-accent)
             -
-                label: Monochrome
+                label: Mono
                 value: var(--text-normal)
     -
         id: dynamic-outline-active-heading-background
@@ -49,7 +49,7 @@ settings:
         default: var(--background-modifier-hover)
         options:
             -
-                label: Monochrome
+                label: Mono
                 value: var(--background-modifier-hover)
             -
                 label: Accent
@@ -82,26 +82,29 @@ settings:
 		level: 3
 		collapsed: true
 	-
-		id: dynamic-outline-h1-font-weight
-		title: 'H1 font weight'
+		id: dynamic-outline-h1-text-color
+		title: 'H1 text color'
+		description: 'Use `--h1-color` from theme or apply monochrome color'
+		markdown: true
 		type: variable-select
-		default: var(--font-bold)
+		default: var(--h1-color)
 		options:
 			-
-				label: Normal
-				value: var(--font-normal)
+				label: Theme
+				value: var(--h1-color)
 			-
-				label: Semibold
-				value: var(--font-semibold)
-			-
-				label: Bold
-				value: var(--font-bold)
+				label: Mono
+				value: var(--text-normal)
 	-
 		id: dynamic-outline-h1-font-style
 		title: 'H1 font style'
+		description: 'Use `--h1-style` from theme or apply custom styling'
 		type: variable-select
-		default: normal
+		default: var(--h1-style)
 		options:
+			-
+				label: Theme
+				value: var(--h1-style)
 			-
 				label: Normal
 				value: normal
@@ -111,9 +114,13 @@ settings:
 	-
 		id: dynamic-outline-h1-font-variant
 		title: 'H1 font variant'
+		description: 'Use `--h1-variant` from theme of apply custom variant'
 		type: variable-select
-		default: normal
+		default: var(--h1-variant)
 		options:
+			-
+				label: Theme
+				value: var(--h1-variant)
 			-
 				label: Normal
 				value: normal
@@ -124,17 +131,15 @@ settings:
 				label: All small-caps
 				value: all-small-caps
 	-
-		id: headings-level-2
-		title: 'Headings level 2'
-		type: heading
-		level: 3
-		collapsed: true
-	-
-		id: dynamic-outline-h2-font-weight
-		title: 'H2 font weight'
+		id: dynamic-outline-h1-font-weight
+		title: 'H1 font weight'
+		description: 'Use `--h1-weight` from theme or apply custom weight'
 		type: variable-select
-		default: var(--font-normal)
+		default: var(--font-bold)
 		options:
+			-
+				label: Theme
+				value: var(--h1-weight)
 			-
 				label: Normal
 				value: var(--font-normal)
@@ -145,11 +150,35 @@ settings:
 				label: Bold
 				value: var(--font-bold)
 	-
+		id: headings-level-2
+		title: 'Headings level 2'
+		type: heading
+		level: 3
+		collapsed: true
+	-
+		id: dynamic-outline-h2-text-color
+		title: 'H2 text color'
+		description: 'Use `--h2-color` from theme or apply monochrome color'
+		markdown: true
+		type: variable-select
+		default: var(--h2-color)
+		options:
+			-
+				label: Theme
+				value: var(--h2-color)
+			-
+				label: Mono
+				value: var(--text-normal)
+	-
 		id: dynamic-outline-h2-font-style
 		title: 'H2 font style'
+		description: 'Use `--h2-style` from theme or apply custom styling'
 		type: variable-select
-		default: normal
+		default: var(--h2-style)
 		options:
+			-
+				label: Theme
+				value: var(--h2-style)
 			-
 				label: Normal
 				value: normal
@@ -159,9 +188,13 @@ settings:
 	-
 		id: dynamic-outline-h2-font-variant
 		title: 'H2 font variant'
+		description: 'Use `--h2-variant` from theme of apply custom variant'
 		type: variable-select
-		default: normal
+		default: var(--h2-variant)
 		options:
+			-
+				label: Theme
+				value: var(--h2-variant)
 			-
 				label: Normal
 				value: normal
@@ -172,17 +205,15 @@ settings:
 				label: All small-caps
 				value: all-small-caps
 	-
-		id: headings-level-3
-		title: 'Headings level 3'
-		type: heading
-		level: 3
-		collapsed: true
-	-
-		id: dynamic-outline-h3-font-weight
-		title: 'H3 font weight'
+		id: dynamic-outline-h2-font-weight
+		title: 'H2 font weight'
+		description: 'Use `--h2-weight` from theme or apply custom weight'
 		type: variable-select
 		default: var(--font-normal)
 		options:
+			- 
+				label: Theme
+				value: var(--h2-weight)
 			-
 				label: Normal
 				value: var(--font-normal)
@@ -193,11 +224,35 @@ settings:
 				label: Bold
 				value: var(--font-bold)
 	-
+		id: headings-level-3
+		title: 'Headings level 3'
+		type: heading
+		level: 3
+		collapsed: true
+	-
+		id: dynamic-outline-h3-text-color
+		title: 'H3 text color'
+		description: 'Use `--h3-color` from theme or apply monochrome color'
+		markdown: true
+		type: variable-select
+		default: var(--h3-color)
+		options:
+			-
+				label: Theme
+				value: var(--h3-color)
+			-
+				label: Mono
+				value: var(--text-normal)
+	-
 		id: dynamic-outline-h3-font-style
 		title: 'H3 font style'
+		description: 'Use `--h3-style` from theme or apply custom styling'
 		type: variable-select
-		default: normal
+		default: var(--h3-style)
 		options:
+			-
+				label: Theme
+				value: var(--h3-style)
 			-
 				label: Normal
 				value: normal
@@ -207,9 +262,13 @@ settings:
 	-
 		id: dynamic-outline-h3-font-variant
 		title: 'H3 font variant'
+		description: 'Use `--h3-variant` from theme of apply custom variant'
 		type: variable-select
-		default: normal
+		default: var(--h3-variant)
 		options:
+			-
+				label: Theme
+				value: var(--h3-variant)
 			-
 				label: Normal
 				value: normal
@@ -220,17 +279,15 @@ settings:
 				label: All small-caps
 				value: all-small-caps
 	-
-		id: headings-level-4
-		title: 'Headings level 4'
-		type: heading
-		level: 3
-		collapsed: true
-	-
-		id: dynamic-outline-h4-font-weight
-		title: 'H4 font weight'
+		id: dynamic-outline-h3-font-weight
+		title: 'H3 font weight'
+		description: 'Use `--h3-weight` from theme or apply custom weight'
 		type: variable-select
 		default: var(--font-normal)
 		options:
+			- 
+				label: Theme
+				value: var(--h3-weight)
 			-
 				label: Normal
 				value: var(--font-normal)
@@ -241,11 +298,35 @@ settings:
 				label: Bold
 				value: var(--font-bold)
 	-
+		id: headings-level-4
+		title: 'Headings level 4'
+		type: heading
+		level: 3
+		collapsed: true
+	-
+		id: dynamic-outline-h4-text-color
+		title: 'H4 text color'
+		description: 'Use `--h4-color` from theme or apply monochrome color'
+		markdown: true
+		type: variable-select
+		default: var(--h4-color)
+		options:
+			-
+				label: Theme
+				value: var(--h4-color)
+			-
+				label: Mono
+				value: var(--text-normal)
+	-
 		id: dynamic-outline-h4-font-style
 		title: 'H4 font style'
+		description: 'Use `--h4-style` from theme or apply custom styling'
 		type: variable-select
-		default: normal
+		default: var(--h4-style)
 		options:
+			-
+				label: Theme
+				value: var(--h4-style)
 			-
 				label: Normal
 				value: normal
@@ -255,9 +336,13 @@ settings:
 	-
 		id: dynamic-outline-h4-font-variant
 		title: 'H4 font variant'
+		description: 'Use `--h4-variant` from theme of apply custom variant'
 		type: variable-select
-		default: normal
+		default: var(--h4-variant)
 		options:
+			-
+				label: Theme
+				value: var(--h4-variant)
 			-
 				label: Normal
 				value: normal
@@ -268,17 +353,15 @@ settings:
 				label: All small-caps
 				value: all-small-caps
 	-
-		id: headings-level-5
-		title: 'Headings level 5'
-		type: heading
-		level: 3
-		collapsed: true
-	-
-		id: dynamic-outline-h5-font-weight
-		title: 'H5 font weight'
+		id: dynamic-outline-h4-font-weight
+		title: 'H4 font weight'
+		description: 'Use `--h4-weight` from theme or apply custom weight'
 		type: variable-select
 		default: var(--font-normal)
 		options:
+			- 
+				label: Theme
+				value: var(--h4-weight)
 			-
 				label: Normal
 				value: var(--font-normal)
@@ -289,11 +372,35 @@ settings:
 				label: Bold
 				value: var(--font-bold)
 	-
+		id: headings-level-5
+		title: 'Headings level 5'
+		type: heading
+		level: 3
+		collapsed: true
+	-
+		id: dynamic-outline-h5-text-color
+		title: 'H5 text color'
+		description: 'Use `--h5-color` from theme or apply monochrome color'
+		markdown: true
+		type: variable-select
+		default: var(--h5-color)
+		options:
+			-
+				label: Theme
+				value: var(--h5-color)
+			-
+				label: Mono
+				value: var(--text-normal)
+	-
 		id: dynamic-outline-h5-font-style
 		title: 'H5 font style'
+		description: 'Use `--h5-style` from theme or apply custom styling'
 		type: variable-select
-		default: normal
+		default: var(--h5-style)
 		options:
+			-
+				label: Theme
+				value: var(--h5-style)
 			-
 				label: Normal
 				value: normal
@@ -303,9 +410,13 @@ settings:
 	-
 		id: dynamic-outline-h5-font-variant
 		title: 'H5 font variant'
+		description: 'Use `--h5-variant` from theme of apply custom variant'
 		type: variable-select
-		default: normal
+		default: var(--h5-variant)
 		options:
+			-
+				label: Theme
+				value: var(--h5-variant)
 			-
 				label: Normal
 				value: normal
@@ -316,17 +427,15 @@ settings:
 				label: All small-caps
 				value: all-small-caps
 	-
-		id: headings-level-6
-		title: 'Headings level 6'
-		type: heading
-		level: 3
-		collapsed: true
-	-
-		id: dynamic-outline-h6-font-weight
-		title: 'H6 font weight'
+		id: dynamic-outline-h5-font-weight
+		title: 'H5 font weight'
+		description: 'Use `--h5-weight` from theme or apply custom weight'
 		type: variable-select
 		default: var(--font-normal)
 		options:
+			- 
+				label: Theme
+				value: var(--h5-weight)
 			-
 				label: Normal
 				value: var(--font-normal)
@@ -337,11 +446,35 @@ settings:
 				label: Bold
 				value: var(--font-bold)
 	-
+		id: headings-level-6
+		title: 'Headings level 6'
+		type: heading
+		level: 3
+		collapsed: true
+	-
+		id: dynamic-outline-h6-text-color
+		title: 'H6 text color'
+		description: 'Use `--h6-color` from theme or apply monochrome color'
+		markdown: true
+		type: variable-select
+		default: var(--h6-color)
+		options:
+			-
+				label: Theme
+				value: var(--h6-color)
+			-
+				label: Mono
+				value: var(--text-normal)
+	-
 		id: dynamic-outline-h6-font-style
 		title: 'H6 font style'
+		description: 'Use `--h6-style` from theme or apply custom styling'
 		type: variable-select
-		default: normal
+		default: var(--h6-style)
 		options:
+			-
+				label: Theme
+				value: var(--h6-style)
 			-
 				label: Normal
 				value: normal
@@ -351,9 +484,13 @@ settings:
 	-
 		id: dynamic-outline-h6-font-variant
 		title: 'H6 font variant'
+		description: 'Use `--h6-variant` from theme of apply custom variant'
 		type: variable-select
-		default: normal
+		default: var(--h6-variant)
 		options:
+			-
+				label: Theme
+				value: var(--h6-variant)
 			-
 				label: Normal
 				value: normal
@@ -363,6 +500,25 @@ settings:
 			-
 				label: All small-caps
 				value: all-small-caps
+	-
+		id: dynamic-outline-h6-font-weight
+		title: 'H6 font weight'
+		description: 'Use `--h6-weight` from theme or apply custom weight'
+		type: variable-select
+		default: var(--font-normal)
+		options:
+			- 
+				label: Theme
+				value: var(--h6-weight)
+			-
+				label: Normal
+				value: var(--font-normal)
+			-
+				label: Semibold
+				value: var(--font-semibold)
+			-
+				label: Bold
+				value: var(--font-bold)
 	-
 		id: text-and-formatting
 		title: 'Text and formatting'
@@ -502,6 +658,13 @@ settings:
 	);
 
 	/* Headings */
+	--dynamic-outline-h1-text-color: var(--h1-color);
+	--dynamic-outline-h2-text-color: var(--h2-color);
+	--dynamic-outline-h3-text-color: var(--h3-color);
+	--dynamic-outline-h4-text-color: var(--h4-color);
+	--dynamic-outline-h5-text-color: var(--h5-color);
+	--dynamic-outline-h6-text-color: var(--h6-color);
+
 	--dynamic-outline-h1-font-weight: var(--font-bold);
 	--dynamic-outline-h2-font-weight: var(--font-normal);
 	--dynamic-outline-h3-font-weight: var(--font-normal);
@@ -509,19 +672,19 @@ settings:
 	--dynamic-outline-h5-font-weight: var(--font-normal);
 	--dynamic-outline-h6-font-weight: var(--font-normal);
 
-	--dynamic-outline-h1-font-style: normal;
-	--dynamic-outline-h2-font-style: normal;
-	--dynamic-outline-h3-font-style: normal;
-	--dynamic-outline-h4-font-style: normal;
-	--dynamic-outline-h5-font-style: normal;
-	--dynamic-outline-h6-font-style: normal;
+	--dynamic-outline-h1-font-style: var(--h1-style);
+	--dynamic-outline-h2-font-style: var(--h2-style);
+	--dynamic-outline-h3-font-style: var(--h3-style);
+	--dynamic-outline-h4-font-style: var(--h4-style);
+	--dynamic-outline-h5-font-style: var(--h5-style);
+	--dynamic-outline-h6-font-style: var(--h6-style);
 
-	--dynamic-outline-h1-font-variant: normal;
-	--dynamic-outline-h2-font-variant: normal;
-	--dynamic-outline-h3-font-variant: normal;
-	--dynamic-outline-h4-font-variant: normal;
-	--dynamic-outline-h5-font-variant: normal;
-	--dynamic-outline-h6-font-variant: normal;
+	--dynamic-outline-h1-font-variant: var(--h1-variant);
+	--dynamic-outline-h2-font-variant: var(--h2-variant);
+	--dynamic-outline-h3-font-variant: var(--h3-variant);
+	--dynamic-outline-h4-font-variant: var(--h4-variant);
+	--dynamic-outline-h5-font-variant: var(--h5-variant);
+	--dynamic-outline-h6-font-variant: var(--h6-variant);
 }
 
 .theme-light {
@@ -709,12 +872,14 @@ button.dynamic-outline-reload[disabled] {
 }
 
 #dynamic-outline li .heading-level-1 {
+	color: var(--dynamic-outline-h1-text-color);
 	font-weight: var(--dynamic-outline-h1-font-weight);
 	font-style: var(--dynamic-outline-h1-font-style);
 	font-variant: var(--dynamic-outline-h1-font-variant);
 }
 
 #dynamic-outline li .heading-level-2 {
+	color: var(--dynamic-outline-h2-text-color);
 	font-weight: var(--dynamic-outline-h2-font-weight);
 	font-style: var(--dynamic-outline-h2-font-style);
 	font-variant: var(--dynamic-outline-h2-font-variant);
@@ -722,6 +887,7 @@ button.dynamic-outline-reload[disabled] {
 }
 
 #dynamic-outline li .heading-level-3 {
+	color: var(--dynamic-outline-h3-text-color);
 	font-weight: var(--dynamic-outline-h3-font-weight);
 	font-style: var(--dynamic-outline-h3-font-style);
 	font-variant: var(--dynamic-outline-h3-font-variant);
@@ -729,6 +895,7 @@ button.dynamic-outline-reload[disabled] {
 }
 
 #dynamic-outline li .heading-level-4 {
+	color: var(--dynamic-outline-h4-text-color);
 	font-weight: var(--dynamic-outline-h4-font-weight);
 	font-style: var(--dynamic-outline-h4-font-style);
 	font-variant: var(--dynamic-outline-h4-font-variant);
@@ -736,6 +903,7 @@ button.dynamic-outline-reload[disabled] {
 }
 
 #dynamic-outline li .heading-level-5 {
+	color: var(--dynamic-outline-h5-text-color);
 	font-weight: var(--dynamic-outline-h5-font-weight);
 	font-style: var(--dynamic-outline-h5-font-style);
 	font-variant: var(--dynamic-outline-h5-font-variant);
@@ -743,6 +911,7 @@ button.dynamic-outline-reload[disabled] {
 }
 
 #dynamic-outline li .heading-level-6 {
+	color: var(--dynamic-outline-h6-text-color);
 	font-weight: var(--dynamic-outline-h6-font-weight);
 	font-style: var(--dynamic-outline-h6-font-style);
 	font-variant: var(--dynamic-outline-h6-font-variant);
